tests/ui/impl-trait/in-bindings/bad-nesting.stderr
error[E0666]: nested `impl Trait` is not allowed
  --> $DIR/bad-nesting.rs:8:21
   |
LL |     let x: impl Foo<impl Sized> = ();
   |            ---------^^^^^^^^^^-
   |            |        |
   |            |        nested `impl Trait` here
   |            outer `impl Trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0666`.
